--- a/static/plugins/livemart-checkout/index.html
+++ b/static/plugins/livemart-checkout/index.html
@@ -15,14 +15,15 @@
 </head>
 <body style="margin: 5px">
 
-<button class="btn btn-primary" onclick="add_to_cart('82807ad6-f4f2-4443-a8a4-0840dfdd4623')">Add Item 1</button>
-<button class="btn btn-primary" onclick="add_to_cart('f944d1ba-45b5-47cb-b08c-5bbfdbf77cc8')">Add Item 2</button>
+<button class="btn btn-primary" onclick="add_to_cart('a5acdfcd-77ff-480e-8ac2-63adcaffc4f2')">Add Item 1</button>
+<button class="btn btn-primary" onclick="add_to_cart('00878a14-c64b-4f09-a92f-6f9d59741d5e')">Add Item 2</button>
+<button class="btn btn-primary" onclick="add_to_cart('68504966-9112-43bb-b037-0fb5f48d3782')">Add Item 3</button>
 <button class="btn btn-primary" onclick="on_show_cart()">Show Cart</button>
 
 <script>
     function on_load() {
-        set_store_key('3a7ee39f530a4642b00233ee8707be7927b3b9175b3e4a949acba2709c46649a7c84379d890e4d07b1b32e69e2f1f76b');
-        set_store_secret('5b9013d2e10f43c7b5aa0b98ddea647a839f4c34cb4941c4b0f892dd508af475');
+        set_store_key('');
+        set_store_secret('');
         get_store_info();
     }
 
